replace and with &

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
               <p>
                 I am a software developer with a passion for creating innovative
                 solutions. I have experience in various programming languages
-                and frameworks, and I am always eager to learn new technologies.
+                and frameworks, & I am always eager to learn new technologies.
               </p>
               <p>
                 Fully proficient in <b>HTML,</b> <strong>CSS,</strong>
