removed software from paragraph

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div>
               <h3 class="head-details">About me</h3>
               <p>
-                I am a software developer with a passion for creating innovative
+                I am a developer with a passion for creating innovative
                 solutions. I have experience in various programming languages
                 and frameworks, & I am always eager to learn new technologies.
               </p>
